# sae2

./: build.md  build_win22h.md  dbmove.md  docker-compose.yml  make.md
backend/: .env.example  Dockerfile  package-lock.json  package.json
backend/src/: app.js  server.js
backend/src/controllers/: submissionController.js
backend/src/database/: mongo.js
backend/src/middleware/: errorHandler.js  logger.js
backend/src/models/: Submission.js
backend/src/routes/: submissionRoutes.js
backend/src/services/: submissionService.js
cert/: generate-certs.sh  setup-certs.sh
client/: CMakeLists.txt  main.cpp
